minio/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: minio
spec:
  tls:
  - hosts:
      - minio.lab.home
    secretName: minio-tls
  rules:
  - host: minio.lab.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9000
